--- a/output.html
+++ b/output.html
@@ -67,7 +67,7 @@
     }
 
     img {
-      max-height: 65vh;
+      max-height: 60vh;
       margin: -10px 0;
     }
 
@@ -267,7 +267,12 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
     <h1>I make <strong>music</strong> with <strong>computers</strong>.</h1>
 <p>💥~🤖~💥</p>
 <h1>I also make <strong><em>software</em></strong> to make <strong>music</strong> with <strong>computers</strong>.</h1>
+<h2>...using <strong>JavaScript</strong>!?</h2>
+<p><strong>Web Audio</strong>, <strong>Web MIDI</strong>, <strong>Electron</strong> (packaged Chromium + Node.js apps)</p>
 <p><a href="https://www.youtube.com/watch?v=01_udUeZ2GU" target="_blank">https://www.youtube.com/watch?v=01_udUeZ2GU</a></p>
+<blockquote>
+<p>I know what you're thinking...</p>
+</blockquote>
 <h1><em>Why would you do that?</em></h1>
 <h1>Playing computer music <strong>live</strong> is ... uh... <em>complicated</em>.</h1>
 <blockquote>
@@ -296,29 +301,12 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 <blockquote>
 <p><a href="https://www.youtube.com/watch?v=iHSMnWpyIeM" target="_blank">https://www.youtube.com/watch?v=iHSMnWpyIeM</a></p>
 </blockquote>
-<blockquote>
-<p>This was the option I wanted to go with. But my songs are already sequenced. How to go about destructuring and playing?</p>
-</blockquote>
-<blockquote>
-<p>I had this crazy idea that I'd take my existing songs, and learn how to play all the individual parts and then build them up one loop at a time.</p>
-</blockquote>
-<h3><strong>Recording anxiety</strong></h3>
-<p><a href="https://www.youtube.com/watch?v=q0HVo6M3w64" target="_blank"><img src="https://c1.staticflickr.com/1/58/168150955_40c7db0172_z.jpg?zz=1" alt=""></a></p>
-<blockquote>
-<p>I suffer from acute recording anxiety. This was always a problem. I’d be jamming away a cool riff, and it sounds awesome, then I hit record and my figures turn to jelly, and it comes out all wrong. I looked long and hard for a solution, but couldn't find anything reliable. It was time to build my own solution.</p>
-</blockquote>
-<h2><strong>Time travel</strong> with Node.js</h2>
-<blockquote>
-<p>I created a Node.js script that allowed me more control over input, storing all MIDI in a buffer, and then allowing me to go back in time and create loops after I played them, along with some realtime loop transform controls.</p>
-</blockquote>
-<blockquote>
-<p>In the process of trying to learn my songs, and failing kind of miserably, I managed to develop a lot of the core looping concepts that still exist in Loop Drop today.</p>
-</blockquote>
-<h2><em>Previously on <a href="http://JSConf.asia" target="_blank">JSConf.asia</a></em>...</h2>
+<h1><em>Previously on <a href="http://JSConf.asia" target="_blank">JSConf.asia</a></em>...</h1>
+<h2>Matt McKegg: I Play the JavaScript</h2>
 <p><a href="https://www.youtube.com/watch?v=NL0nb8A8FDM" target="_blank"><img src="images/jsconf.asia.png" alt=""></a></p>
-<p><code>youtu.be/NL0nb8A8FDM</code></p>
 <h2><strong>Loop Drop</strong> — <a href="http://loopjs.com" target="_blank">loopjs.com</a></h2>
 <p><a href="http://loopjs.com" target="_blank"><img src="logo.png" alt=""></a></p>
+<p><code>github.com/mmckegg/loop-drop-app</code></p>
 <blockquote>
 <blockquote>
 <p><a href="https://www.youtube.com/watch?v=5zutWpFG8pk" target="_blank">Play some tunes</a> and give a quick overview of how it works.</p>
@@ -326,31 +314,28 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 </blockquote>
 <blockquote>
 <blockquote>
+<p>-------- Over to Ruth ------</p>
+</blockquote>
+</blockquote>
+<blockquote>
+<blockquote>
+<p>Winamp Sample</p>
+</blockquote>
+</blockquote>
+<blockquote>
+<blockquote>
+<p>------ after martin's talk ------</p>
+</blockquote>
+</blockquote>
+<blockquote>
+<blockquote>
 <p>Sample the audience and make a song!</p>
 </blockquote>
 </blockquote>
-<h2>Loop Drop is <strong>JavaScript</strong>!</h2>
-<blockquote>
-<p>Loop Drop is a desktop application that you can install on your computer. But it is actually 100% JavaScript! This is achieved using Electron (made by Github), which combines Node.js with Chromium giving you everything you'd ever want!</p>
-</blockquote>
-<p>Electron - <strong>Chromium + Node.js</strong></p>
-<p><a href="http://electron.atom.io" target="_blank">http://electron.atom.io</a></p>
-<h1>Contributing</h1>
-<ul>
-<li><a href="http://github.com/mmckegg/loop-drop-app" target="_blank">github.com/mmckegg/loop-drop-app</a></li>
-<li><a href="http://patreon.com/MattMcKegg" target="_blank">patreon.com/MattMcKegg</a></li>
-</ul>
-<p><img src="heart.png" alt=""></p>
-<h1>DESTROY WITH SCIENCE</h1>
-<p>Loop Drop R&amp;D <strong>super secret*</strong> laboratory!</p>
-<ul>
-<li><a href="http://soundcloud.com/destroy-with-science" target="_blank">soundcloud.com/destroy-with-science</a></li>
-<li><a href="http://destroywithscience.bandcamp.com/album/droptivist" target="_blank">destroywithscience.bandcamp.com/album/droptivist</a></li>
-</ul>
 
   </div>
   <div class='Overlay'>
-    <a href='https://twitter.com/MattMcKegg'>@MattMcKegg</a> | <strong>github.com/mmckegg</strong>
+    <strong>github.com/mmckegg</strong> | <a href='https://twitter.com/MattMcKegg'>@MattMcKegg</a> <br/> soundcloud.com/destroy-with-science
   </div>
   <script>
     var viewer = document.querySelector('.Viewer')
